--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="page">
             <aside id="sidebar">
-                <nav>
+                <nav>-
                     <ul>
                         <li id="nav-1" class="active"><a href="#home">Home</a></li>
                         <li id="nav-2"><a href="#works">Works</a></li>
